...

enum LibraryPlatform: String, CaseIterable {
    case steam, epic, gog, pc, playstation, xbox, nintendoSwitch = "nintendo-switch", android, ios

    var title: String {
        switch self {
        case .steam: "Steam"
        case .epic: "Epic Games"
        case .gog: "GOG"
        case .pc: "PC"
        case .playstation: "PlayStation"
        case .xbox: "Xbox"
        case .nintendoSwitch: "Nintendo Switch"
        case .android: "Android"
        case .ios: "iOS"
        }
    }
...
